JAI - v0.0.1 - remember to add router public ip to nginx geoip block

--- a/.env
+++ b/.env
@@ -12,6 +12,35 @@ NGINX_MEMORY=1G
 NGINX_CPU=1
 
 # =============================================================================
+# NETWORK OPTIMIZATION SETTINGS
+# =============================================================================
+# Network buffer sizes (bytes)
+NET_CORE_RMEM_MAX=134217728
+NET_CORE_WMEM_MAX=134217728
+NET_IPV4_TCP_RMEM=4096 131072 134217728
+NET_IPV4_TCP_WMEM=4096 131072 134217728
+NET_CORE_NETDEV_MAX_BACKLOG=5000
+
+# File descriptor limits
+ULIMIT_NOFILE_SOFT=65536
+ULIMIT_NOFILE_HARD=65536
+
+# Docker network settings
+DOCKER_NETWORK_NAME=devstral-network
+DOCKER_SUBNET=172.21.0.0/16
+DOCKER_MTU=9000
+
+# =============================================================================
+# UNLIMITED TIMEOUT SETTINGS
+# =============================================================================
+# Set to 0 for unlimited, or specific seconds
+UNLIMITED_TIMEOUT=0
+STREAMING_TIMEOUT=0
+AIOHTTP_TOTAL_TIMEOUT=0
+AIOHTTP_CONNECT_TIMEOUT=0
+AIOHTTP_READ_TIMEOUT=0
+
+# =============================================================================
 # CURRENT MODEL CONFIGURATION (Change these for different models)
 # =============================================================================
 # For DeepSeek R1 1.5B:
@@ -61,7 +90,7 @@ MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 # APPLICATION PERFORMANCE SETTINGS
 # =============================================================================
 MODEL_MAX_TOKENS=1024                    # 2048 for 1.5B, 1024 for 24B
-MODEL_TIMEOUT=300                        # 120 for 1.5B, 180 for 24B
+MODEL_TIMEOUT=0                          # 0 = unlimited, or specific seconds
 CHAT_HISTORY_LIMIT=15                    # 25 for 1.5B, 15 for 24B
 CHAT_CACHE_TTL_SECONDS=7200
 RATE_LIMIT_MESSAGES_PER_MINUTE=10
@@ -117,3 +146,13 @@ REDIS_MAX_CONNECTIONS=50                 # Redis connection pool size
 REDIS_SOCKET_KEEPALIVE=true             # Keep Redis connections alive
 REDIS_RETRY_ON_TIMEOUT=true             # Retry on timeout
 REDIS_DECODE_RESPONSES=true             # Decode Redis responses
+
+# =============================================================================
+# AIOHTTP CLIENT CONFIGURATION
+# =============================================================================
+AIOHTTP_LIMIT=0                         # 0 = unlimited connections
+AIOHTTP_LIMIT_PER_HOST=0                # 0 = unlimited per host
+AIOHTTP_KEEPALIVE_TIMEOUT=0             # 0 = unlimited keepalive
+AIOHTTP_ENABLE_CLEANUP_CLOSED=false     # Disable cleanup for performance
+AIOHTTP_FORCE_CLOSE=false               # Keep connections open
+AIOHTTP_TTL_DNS_CACHE=0                 # 0 = unlimited DNS cache
