--- a/.env
+++ b/.env
@@ -1,18 +1,51 @@
 # .env file - Complete Environment-Driven Configuration
 # =============================================================================
-# DOCKER COMPOSE RESOURCE LIMITS
+# 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
 # =============================================================================
-QUART_APP_MEMORY=1G
-QUART_APP_CPU=1
-OLLAMA_MEMORY=16G
-OLLAMA_CPU=4
-REDIS_MEMORY=1G
-REDIS_CPU=1
-NGINX_MEMORY=1G
-NGINX_CPU=1
+# CRITICAL: Change these values for security and customization!
+
+# Quart Application Security (REQUIRED TO CHANGE)
+SECRET_KEY=CHANGE-THIS-TO-A-SECURE-RANDOM-STRING-32-CHARACTERS-MINIMUM
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+ADMIN_USER_ID=admin
+
+# Domain Configuration (REQUIRED TO CHANGE) #your-domain.com
+ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk 
+
+# Redis Connection (CHANGE IF USING EXTERNAL REDIS)
+REDIS_URL=redis://redis:6379/0
+
+# Model Configuration (CHANGE FOR DIFFERENT MODELS)
+OLLAMA_MODEL=devstral:24b
+MODEL_DISPLAY_NAME=Devstral 24B
+MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
+
+# Performance Tuning (ADJUST FOR YOUR HARDWARE)
+OLLAMA_GPU_LAYERS=12                     # Adjust based on your GPU VRAM
+OLLAMA_CONTEXT_SIZE=2048                 # Adjust based on your needs
+OLLAMA_BATCH_SIZE=128                    # Adjust based on performance
+OLLAMA_NUM_THREAD=8                      # Adjust based on your CPU cores
+
+# User Management (ADJUST FOR YOUR NEEDS)
+MAX_CHATS_PER_USER=1                     # Maximum chats per user
+MAX_PENDING_USERS=2                      # Maximum pending user registrations
+RATE_LIMIT_MESSAGES_PER_MINUTE=10        # Rate limit per user
 
 # =============================================================================
-# NETWORK OPTIMIZATION SETTINGS
+# 📊 DOCKER COMPOSE RESOURCE LIMITS and app limits (ADJUST FOR YOUR SYSTEM)
+# =============================================================================
+OLLAMA_MEMORY=16G                        # Total RAM for Ollama
+OLLAMA_CPU=4                             # CPU cores for Ollama
+QUART_APP_MEMORY=1G                      # RAM for web app
+QUART_APP_CPU=1
+NGINX_MEMORY=1G                          # RAM for nginx
+NGINX_CPU=1
+REDIS_MEMORY=1G
+REDIS_CPU=1
+
+# =============================================================================
+# 🌐 NETWORK OPTIMIZATION SETTINGS
 # =============================================================================
 # Network buffer sizes (bytes)
 NET_CORE_RMEM_MAX=134217728
@@ -26,7 +59,6 @@ ULIMIT_NOFILE_SOFT=65536
 ULIMIT_NOFILE_HARD=65536
 
 # Docker network settings
-DOCKER_NETWORK_NAME=devstral-network
 DOCKER_SUBNET=172.21.0.0/16
 DOCKER_MTU=9000
 
@@ -41,30 +73,18 @@ AIOHTTP_CONNECT_TIMEOUT=0
 AIOHTTP_READ_TIMEOUT=0
 
 # =============================================================================
-# CURRENT MODEL CONFIGURATION (Change these for different models)
+# 🤖 CURRENT MODEL CONFIGURATION
 # =============================================================================
-# For DeepSeek R1 1.5B:
-#OLLAMA_MODEL=deepseek-r1:1.5b
-#MODEL_DISPLAY_NAME=DeepSeek R1 1.5B
-#MODEL_DESCRIPTION=DeepSeek R1 Distilled - Fast reasoning with step-by-step thinking
-
-# For Devstral 24B (uncomment and comment above):
-OLLAMA_MODEL=devstral:24b
-MODEL_DISPLAY_NAME=Devstral 24B
-MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
+# Models are configured in the "CONFIGURE ME" section above
 
 # =============================================================================
-# OLLAMA PERFORMANCE PARAMETERS (All configurable)
+# ⚡ OLLAMA PERFORMANCE PARAMETERS
 # =============================================================================
-OLLAMA_HOST=0.0.0.0                                                      #|   VRAM DEPENDENT              |#
-OLLAMA_URL=http://ollama:11434                                           #|                               |#
-OLLAMA_GPU_LAYERS=12                     # 18                            #|29 for 1.5B, 41 for 24B        |#
-OLLAMA_NUM_THREAD=8                      # CPU threads                   #|                               |#
-OLLAMA_CONTEXT_SIZE=2048                 # 2048                          #|16384 for 1.5B, 8192 for 24B   |#
-OLLAMA_BATCH_SIZE=128                     # 32                            #|256 for 1.5B, 128 for 24B      |#
+OLLAMA_HOST=0.0.0.0
+OLLAMA_URL=http://ollama:11434
 OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
-OLLAMA_LOAD_TIMEOUT=30m                  # 15m for 1.5B, 30m for 24B
+OLLAMA_LOAD_TIMEOUT=30m                  # Model loading timeout
 OLLAMA_NOPRUNE=1                         # Never unload
 OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
 OLLAMA_MMAP=0                            # Disable memory mapping
@@ -72,7 +92,7 @@ OLLAMA_NUMA=0                            # Disable NUMA
 OLLAMA_MAIN_GPU=0                        # Primary GPU
 
 # =============================================================================
-# MODELFILE PARAMETERS (All configurable) - FIXED WITH BOOLEAN VALUES
+# 🎛️ MODELFILE PARAMETERS
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -81,31 +101,27 @@ MODEL_REPEAT_PENALTY=1.1
 MODEL_MIROSTAT=0
 MODEL_MIROSTAT_ETA=0.1
 MODEL_MIROSTAT_TAU=5.0
-# CRITICAL: Use boolean values for Ollama parameters
 MODEL_USE_MMAP=false                     # BOOLEAN: false to disable mmap
 MODEL_USE_MLOCK=true                     # BOOLEAN: true to enable mlock
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
-# APPLICATION PERFORMANCE SETTINGS
+# 📱 APPLICATION PERFORMANCE SETTINGS
 # =============================================================================
-MODEL_MAX_TOKENS=1024                    # 2048 for 1.5B, 1024 for 24B
-MODEL_TIMEOUT=0                          # 0 = unlimited, or specific seconds
-CHAT_HISTORY_LIMIT=15                    # 25 for 1.5B, 15 for 24B
+MODEL_MAX_TOKENS=1024
+MODEL_TIMEOUT=0                          # 0 = unlimited timeout
+CHAT_HISTORY_LIMIT=15
 CHAT_CACHE_TTL_SECONDS=7200
-RATE_LIMIT_MESSAGES_PER_MINUTE=10
-SSE_MAX_CONNECTIONS=25                   # 25
+SSE_MAX_CONNECTIONS=25
 
 # =============================================================================
-# CHAT AND USER MANAGEMENT SETTINGS
+# 👥 CHAT AND USER MANAGEMENT SETTINGS
 # =============================================================================
 RATE_LIMIT_WINDOW=60                     # Rate limit window in seconds
-MAX_CHATS_PER_USER=1                     # Maximum chats per user
-MAX_PENDING_USERS=2                      # Maximum pending user registrations
 USER_ID_COUNTER_START=1000               # Starting ID for regular users
 
 # =============================================================================
-# NVIDIA GPU SETTINGS
+# 🖥️ NVIDIA GPU SETTINGS
 # =============================================================================
 NVIDIA_VISIBLE_DEVICES=0
 CUDA_MEMORY_FRACTION=0.95
@@ -113,14 +129,9 @@ LOG_LEVEL=INFO
 LOG_FORMAT=json
 
 # =============================================================================
-# QUART WEB APPLICATION
+# 🌐 QUART WEB APPLICATION
 # =============================================================================
-SECRET_KEY=your-very-secret-key-change-this-in-production
-SECURE_COOKIES=0
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
-ADMIN_USER_ID=admin                      # Fixed admin user ID
-REDIS_URL=redis://redis:6379/0
+SECURE_COOKIES=0                         # Set to 1 for HTTPS
 APP_HOST=0.0.0.0
 APP_PORT=8000
 APP_WORKERS=1
@@ -129,26 +140,26 @@ SSE_HEARTBEAT_INTERVAL=30
 SSE_RETRY_TIMEOUT=5000
 
 # =============================================================================
-# VALIDATION AND SECURITY SETTINGS
+# 🔒 VALIDATION AND SECURITY SETTINGS
 # =============================================================================
-MIN_USERNAME_LENGTH=3                    # Minimum username length
-MAX_USERNAME_LENGTH=50                   # Maximum username length
-MIN_PASSWORD_LENGTH=6                    # Minimum password length
-MAX_PASSWORD_LENGTH=128                  # Maximum password length
-MAX_MESSAGE_LENGTH=10000                 # Maximum message length
-MAX_FILENAME_LENGTH=255                  # Maximum filename length
-CSRF_TOKEN_LENGTH=32                     # CSRF token length (hex chars)
+MIN_USERNAME_LENGTH=3
+MAX_USERNAME_LENGTH=50
+MIN_PASSWORD_LENGTH=6
+MAX_PASSWORD_LENGTH=128
+MAX_MESSAGE_LENGTH=10000
+MAX_FILENAME_LENGTH=255
+CSRF_TOKEN_LENGTH=32
 
 # =============================================================================
-# REDIS CONFIGURATION
+# 📦 REDIS CONFIGURATION
 # =============================================================================
-REDIS_MAX_CONNECTIONS=50                 # Redis connection pool size
-REDIS_SOCKET_KEEPALIVE=true             # Keep Redis connections alive
-REDIS_RETRY_ON_TIMEOUT=true             # Retry on timeout
-REDIS_DECODE_RESPONSES=true             # Decode Redis responses
+REDIS_MAX_CONNECTIONS=50
+REDIS_SOCKET_KEEPALIVE=true
+REDIS_RETRY_ON_TIMEOUT=true
+REDIS_DECODE_RESPONSES=true
 
 # =============================================================================
-# AIOHTTP CLIENT CONFIGURATION
+# 🚀 AIOHTTP CLIENT CONFIGURATION
 # =============================================================================
 AIOHTTP_LIMIT=0                         # 0 = unlimited connections
 AIOHTTP_LIMIT_PER_HOST=0                # 0 = unlimited per host
