--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,10 +4,9 @@ pid /var/run/nginx.pid;
 error_log /var/log/nginx/error.log warn;
 
 events {
-    worker_connections 8192;
+    worker_connections 2048;
     use epoll;
     multi_accept on;
-    worker_rlimit_nofile 65536;
 }
 
 http {
@@ -22,25 +21,19 @@ http {
     
     access_log /var/log/nginx/access.log main;
 
-    # Basic settings with unlimited network optimization
+    # Basic settings - IPv4 only
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 0;               # Unlimited keepalive
+    keepalive_timeout 300;
     types_hash_max_size 2048;
     server_tokens off;
-    client_max_body_size 100M;        # Larger body size
-    client_body_buffer_size 128k;     # Larger buffer
-    client_header_buffer_size 4k;     # Larger header buffer
-    large_client_header_buffers 8 16k; # More header buffers
+    client_max_body_size 50M;
 
-    # UNLIMITED TIMEOUTS - Hardcoded for maximum performance
-    proxy_connect_timeout 0;          # No connection timeout
-    proxy_send_timeout 0;             # No send timeout
-    proxy_read_timeout 0;             # No read timeout
-    proxy_buffering off;              # No buffering for streaming
-    proxy_request_buffering off;      # No request buffering
-    proxy_cache off;                  # No caching
+    # FIXED: Reasonable timeouts but still long for AI responses
+    proxy_connect_timeout 60s;            # 1 minute to connect
+    proxy_send_timeout 600s;              # 10 minutes send timeout
+    proxy_read_timeout 600s;              # 10 minutes read timeout
     
     # GZIP Configuration
     gzip on;
@@ -51,11 +44,9 @@ http {
         text/plain
         text/css
         application/json
-        application/xml
-        application/javascript
-        text/javascript;
+        application/xml;
 
-    # Security Headers
+    # Security Headers - NO JAVASCRIPT ALLOWED
     add_header X-Frame-Options DENY always;
     add_header X-Content-Type-Options nosniff always;
     add_header X-XSS-Protection "1; mode=block" always;
@@ -63,7 +54,7 @@ http {
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; connect-src 'self'" always;
     
-    # Trust Cloudflare IPs for real IP detection
+    # Trust Cloudflare IPs for real IP detection (IPv4 only) - RESTORED
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
@@ -81,20 +72,23 @@ http {
     set_real_ip_from 198.41.128.0/17;
     real_ip_header CF-Connecting-IP;
     
-    # Rate limiting zones with higher limits
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=1000r/m;
-    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=10000r/m;
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=2000r/m;
+    # FIXED: Rate limiting zones with proper sizes - RESTORED
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=500r/m;
+    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=6000r/m;
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=1000r/m;
     limit_req_status 429;
 
-    # IP Whitelisting
+    # IPv4-only IP Whitelisting - RESTORED
     geo $allowed_ip {
         default 0;                      # Deny all by default
         127.0.0.1/32 1;               # Allow localhost
         192.168.0.0/16 1;             # Allow private network 192.168.x.x
         10.0.0.0/8 1;                 # Allow private network 10.x.x.x
         172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
-        # Cloudflare IP ranges
+        # Add your specific public IPs here:
+        # YOUR_HOME_IP/32 1;          # Replace with your home IP
+        # YOUR_OFFICE_IP/32 1;        # Replace with your office IP
+        # Cloudflare IP ranges (if using Cloudflare proxy):
         103.21.244.0/22 1;
         103.22.200.0/22 1;
         103.31.4.0/22 1;
@@ -112,25 +106,26 @@ http {
         198.41.128.0/17 1;
     }
 
-    # Upstream definition with unlimited connections
+    # Upstream definition for better load balancing
     upstream quart_backend {
-        server quart-app:8000 max_fails=0 fail_timeout=0s max_conns=0;
-        keepalive 1000;               # Many keep-alive connections
-        keepalive_requests 100000;    # Many requests per connection
-        keepalive_timeout 0;          # Unlimited keepalive timeout
+        server quart-app:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
     }
 
-    # Default server block
+    # Default server block - IPv4 only - RESTORED
     server {
         listen 80 default_server;
         server_name _;
         
+        # Root directory for error pages
         root /usr/share/nginx/html;
         
+        # Serve unauthorized page for invalid domains
         location / {
             return 403;
         }
         
+        # Error page for invalid domains
         error_page 403 /unauthorized.html;
         location = /unauthorized.html {
             root /usr/share/nginx/html;
@@ -138,26 +133,27 @@ http {
         }
     }
 
-    # Main server block
+    # Main server block - IPv4 only for authorized domains - RESTORED
     server {
         listen 80;
-        server_name localhost ai.junder.uk;
+        server_name localhost ai.junder.uk;  # ONLY these domains allowed
         
-        # IP Access Control
+        # IP Access Control - Return 403 for blocked IPs - RESTORED
         if ($allowed_ip = 0) {
             return 403;
         }
 
+        # Root directory for static files
         root /usr/share/nginx/html;
 
-        # Static files
+        # Static files - RESTORED
         location /static/ {
             alias /usr/share/nginx/html/static/;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
         }
         
-        # Health check endpoint
+        # Health check endpoint (no rate limiting) - FIXED timeout
         location /health {
             access_log off;
             proxy_pass http://quart_backend/health;
@@ -165,102 +161,107 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # Health check specific timeouts
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 10s;
-            proxy_read_timeout 10s;
+            # Short timeouts for health checks
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 15s;
+            proxy_read_timeout 15s;
         }
         
-        # Chat endpoint - UNLIMITED STREAMING
+        # Chat endpoint - STREAMING with long timeouts - RESTORED
         location /chat {
-            limit_req zone=chat_limit burst=10000 nodelay;
+            limit_req zone=chat_limit burst=1000 nodelay;
             
             proxy_pass http://quart_backend/chat;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED STREAMING SETTINGS
+            # CRITICAL: Chunked response settings - RESTORED
             proxy_buffering off;
             proxy_cache off;
             proxy_request_buffering off;
+            
+            # Headers for chunked response - RESTORED
             proxy_set_header Connection "";
             proxy_http_version 1.1;
             
-            # UNLIMITED TIMEOUTS
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            # LONG timeouts for streaming - RESTORED but reasonable
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 600s;          # 10 minutes
+            proxy_read_timeout 600s;          # 10 minutes
         }
         
-        # Authentication endpoints
+        # Authentication endpoints - RESTORED
         location ~ ^/(login|register|logout)$ {
-            limit_req zone=login_limit burst=1000 nodelay;
+            limit_req zone=login_limit burst=100 nodelay;
             
             proxy_pass http://quart_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED TIMEOUTS
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
         
-        # Admin endpoints
+        # Admin endpoints - RESTORED
         location /admin {
-            limit_req zone=general_limit burst=2000 nodelay;
+            limit_req zone=general_limit burst=200 nodelay;
             
             proxy_pass http://quart_backend/admin;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED TIMEOUTS
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            # LONG timeouts for admin operations - RESTORED but reasonable
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
         }
         
-        # All other requests
+        # All other requests - RESTORED
         location / {
-            limit_req zone=general_limit burst=2000 nodelay;
+            limit_req zone=general_limit burst=500 nodelay;
             
             proxy_pass http://quart_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED TIMEOUTS
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
         }
         
-        # Block access to sensitive paths
+        # Block access to sensitive paths - RESTORED
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
         }
         
-        # Error pages
+        # Error pages for this domain - RESTORED + ADDED 50x
         error_page 403 /unauthorized.html;
         location = /unauthorized.html {
             root /usr/share/nginx/html;
