--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@
 # Quart Application Security (REQUIRED TO CHANGE)
 SECRET_KEY=CHANGE-THIS-TO-A-SECURE-RANDOM-STRING-32-CHARACTERS-MINIMUM
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
+ADMIN_PASSWORD=CHANGE-THIS-SECURE-PASSWORD
 ADMIN_USER_ID=admin
 
-# Domain Configuration (REQUIRED TO CHANGE) #your-domain.com
-ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk 
+# Domain Configuration (REQUIRED TO CHANGE)
+ALLOWED_DOMAINS=localhost,127.0.0.1,your-domain.com
 
 # Redis Connection (CHANGE IF USING EXTERNAL REDIS)
 REDIS_URL=redis://redis:6379/0
@@ -24,25 +24,29 @@ MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
 # Performance Tuning (ADJUST FOR YOUR HARDWARE)
 OLLAMA_GPU_LAYERS=12                     # Adjust based on your GPU VRAM
 OLLAMA_CONTEXT_SIZE=2048                 # Adjust based on your needs
-OLLAMA_BATCH_SIZE=128                    # Adjust based on performance
+OLLAMA_BATCH_SIZE=512                    # Increased for faster generation
 OLLAMA_NUM_THREAD=8                      # Adjust based on your CPU cores
 
 # User Management (ADJUST FOR YOUR NEEDS)
 MAX_CHATS_PER_USER=1                     # Maximum chats per user
 MAX_PENDING_USERS=2                      # Maximum pending user registrations
-RATE_LIMIT_MESSAGES_PER_MINUTE=10        # Rate limit per user
+RATE_LIMIT_MESSAGES_PER_MINUTE=100       # INCREASED: Rate limit per user (was 10)
 
-# =============================================================================
-# 📊 DOCKER COMPOSE RESOURCE LIMITS and app limits (ADJUST FOR YOUR SYSTEM)
-# =============================================================================
+# Resource Limits (ADJUST FOR YOUR SYSTEM)
 OLLAMA_MEMORY=16G                        # Total RAM for Ollama
 OLLAMA_CPU=4                             # CPU cores for Ollama
 QUART_APP_MEMORY=1G                      # RAM for web app
-QUART_APP_CPU=1
 NGINX_MEMORY=1G                          # RAM for nginx
-NGINX_CPU=1
+
+# =============================================================================
+# 📊 DOCKER COMPOSE RESOURCE LIMITS
+# =============================================================================
+QUART_APP_MEMORY=1G
+QUART_APP_CPU=1
 REDIS_MEMORY=1G
 REDIS_CPU=1
+NGINX_MEMORY=1G
+NGINX_CPU=1
 
 # =============================================================================
 # 🌐 NETWORK OPTIMIZATION SETTINGS
@@ -52,7 +56,6 @@ NET_CORE_RMEM_MAX=134217728
 NET_CORE_WMEM_MAX=134217728
 NET_IPV4_TCP_RMEM=4096 131072 134217728
 NET_IPV4_TCP_WMEM=4096 131072 134217728
-NET_CORE_NETDEV_MAX_BACKLOG=5000
 
 # File descriptor limits
 ULIMIT_NOFILE_SOFT=65536
@@ -108,7 +111,7 @@ MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 # =============================================================================
 # 📱 APPLICATION PERFORMANCE SETTINGS
 # =============================================================================
-MODEL_MAX_TOKENS=1024
+MODEL_MAX_TOKENS=2048                    # Increased max tokens
 MODEL_TIMEOUT=0                          # 0 = unlimited timeout
 CHAT_HISTORY_LIMIT=15
 CHAT_CACHE_TTL_SECONDS=7200
