--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,25 +22,17 @@ http {
     
     access_log /var/log/nginx/access.log main;
 
-    # Basic settings with unlimited network optimization
+    # Basic settings
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 0;               # Unlimited keepalive
+    keepalive_timeout 65;
     types_hash_max_size 2048;
     server_tokens off;
-    client_max_body_size 100M;        # Larger body size
-    client_body_buffer_size 128k;     # Larger buffer
-    client_header_buffer_size 4k;     # Larger header buffer
-    large_client_header_buffers 8 16k; # More header buffers
-
-    # UNLIMITED TIMEOUTS - Hardcoded for maximum performance
-    proxy_connect_timeout 0;          # No connection timeout
-    proxy_send_timeout 0;             # No send timeout
-    proxy_read_timeout 0;             # No read timeout
-    proxy_buffering off;              # No buffering for streaming
-    proxy_request_buffering off;      # No request buffering
-    proxy_cache off;                  # No caching
+    client_max_body_size 1M;              # Strict limit for most endpoints
+    client_body_buffer_size 16k;          # Smaller buffer for security
+    client_header_buffer_size 2k;         # Smaller header buffer
+    large_client_header_buffers 4 8k;     # Fewer header buffers
     
     # GZIP Configuration
     gzip on;
@@ -81,43 +73,35 @@ http {
     set_real_ip_from 198.41.128.0/17;
     real_ip_header CF-Connecting-IP;
     
-    # Rate limiting zones with higher limits
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=1000r/m;
-    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=10000r/m;
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=2000r/m;
+    # STRICT Rate limiting zones - Much lower limits for most endpoints
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;        # 10 requests per minute for login
+    limit_req_zone $binary_remote_addr zone=register_limit:10m rate=5r/m;      # 5 requests per minute for register
+    limit_req_zone $binary_remote_addr zone=strict_limit:10m rate=30r/m;       # 30 requests per minute for general endpoints
+    limit_req_zone $binary_remote_addr zone=health_limit:10m rate=60r/m;       # 60 requests per minute for health checks
+    
+    # UNLIMITED zones for chat and admin (only accessible to authenticated users)
+    limit_req_zone $binary_remote_addr zone=chat_unlimited:10m rate=10000r/m;  # Unlimited for chat
+    limit_req_zone $binary_remote_addr zone=admin_unlimited:10m rate=10000r/m; # Unlimited for admin
+    
     limit_req_status 429;
 
-    # IP Whitelisting
+    # IP Whitelisting - More restrictive
     geo $allowed_ip {
         default 0;                      # Deny all by default
         127.0.0.1/32 1;               # Allow localhost
         192.168.0.0/16 1;             # Allow private network 192.168.x.x
         10.0.0.0/8 1;                 # Allow private network 10.x.x.x
         172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
-        # Cloudflare IP ranges
-        103.21.244.0/22 1;
-        103.22.200.0/22 1;
-        103.31.4.0/22 1;
-        104.16.0.0/13 1;
-        104.24.0.0/14 1;
-        108.162.192.0/18 1;
-        131.0.72.0/22 1;
-        141.101.64.0/18 1;
-        162.158.0.0/15 1;
-        172.64.0.0/13 1;
-        173.245.48.0/20 1;
-        188.114.96.0/20 1;
-        190.93.240.0/20 1;
-        197.234.240.0/22 1;
-        198.41.128.0/17 1;
+        # Add specific IP ranges here if needed
+        # 203.0.113.0/24 1;           # Example: Allow specific public IP range
     }
 
-    # Upstream definition with unlimited connections
+    # Upstream definition with standard settings
     upstream quart_backend {
-        server quart-app:8000 max_fails=0 fail_timeout=0s max_conns=0;
-        keepalive 1000;               # Many keep-alive connections
-        keepalive_requests 100000;    # Many requests per connection
-        keepalive_timeout 0;          # Unlimited keepalive timeout
+        server quart-app:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;                 # Reasonable keep-alive connections
+        keepalive_requests 1000;      # Standard requests per connection
+        keepalive_timeout 60s;        # Standard keepalive timeout
     }
 
     # Default server block
@@ -150,15 +134,24 @@ http {
 
         root /usr/share/nginx/html;
 
-        # Static files
+        # Static files - STRICT limits
         location /static/ {
+            limit_req zone=strict_limit burst=10 nodelay;
+            
             alias /usr/share/nginx/html/static/;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
+            
+            # Standard timeouts for static files
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
         }
         
-        # Health check endpoint
+        # Health check endpoint - MODERATE limits
         location /health {
+            limit_req zone=health_limit burst=20 nodelay;
+            
             access_log off;
             proxy_pass http://quart_backend/health;
             proxy_set_header Host $host;
@@ -168,40 +161,18 @@ http {
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # Health check specific timeouts
+            # Standard timeouts for health checks
             proxy_connect_timeout 5s;
             proxy_send_timeout 10s;
             proxy_read_timeout 10s;
         }
         
-        # Chat endpoint - UNLIMITED STREAMING
-        location /chat {
-            limit_req zone=chat_limit burst=10000 nodelay;
+        # Chat endpoints - UNLIMITED for authenticated users only
+        location ~ ^/chat {
+            limit_req zone=chat_unlimited burst=1000 nodelay;
             
-            proxy_pass http://quart_backend/chat;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
-            
-            # UNLIMITED STREAMING SETTINGS
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_request_buffering off;
-            proxy_set_header Connection "";
-            proxy_http_version 1.1;
-            
-            # UNLIMITED TIMEOUTS
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
-        }
-        
-        # Authentication endpoints
-        location ~ ^/(login|register|logout)$ {
-            limit_req zone=login_limit burst=1000 nodelay;
+            # Larger body size for chat messages
+            client_max_body_size 10M;
             
             proxy_pass http://quart_backend;
             proxy_set_header Host $host;
@@ -211,15 +182,23 @@ http {
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED TIMEOUTS
+            # UNLIMITED TIMEOUTS for chat streaming
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            proxy_set_header Connection "";
+            proxy_http_version 1.1;
             proxy_connect_timeout 0;
             proxy_send_timeout 0;
             proxy_read_timeout 0;
         }
         
-        # Admin endpoints
+        # Admin endpoints - UNLIMITED for admin users only
         location /admin {
-            limit_req zone=general_limit burst=2000 nodelay;
+            limit_req zone=admin_unlimited burst=1000 nodelay;
+            
+            # Larger body size for admin operations
+            client_max_body_size 5M;
             
             proxy_pass http://quart_backend/admin;
             proxy_set_header Host $host;
@@ -229,15 +208,67 @@ http {
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED TIMEOUTS
+            # UNLIMITED TIMEOUTS for admin operations
             proxy_connect_timeout 0;
             proxy_send_timeout 0;
             proxy_read_timeout 0;
         }
         
-        # All other requests
+        # Authentication endpoints - STRICT limits
+        location /login {
+            limit_req zone=login_limit burst=3 nodelay;
+            
+            proxy_pass http://quart_backend/login;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
+            
+            # STRICT timeouts for auth endpoints
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        location /register {
+            limit_req zone=register_limit burst=2 nodelay;
+            
+            proxy_pass http://quart_backend/register;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
+            
+            # STRICT timeouts for auth endpoints
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        location /logout {
+            limit_req zone=strict_limit burst=5 nodelay;
+            
+            proxy_pass http://quart_backend/logout;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_Set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
+            
+            # STRICT timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # All other requests - STRICT limits
         location / {
-            limit_req zone=general_limit burst=2000 nodelay;
+            limit_req zone=strict_limit burst=10 nodelay;
             
             proxy_pass http://quart_backend;
             proxy_set_header Host $host;
@@ -247,14 +278,21 @@ http {
             proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED TIMEOUTS
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            # STRICT timeouts for general requests
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
         
         # Block access to sensitive paths
         location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+        
+        # Block access to common attack vectors
+        location ~ \.(php|asp|aspx|jsp|cgi)$ {
             deny all;
             access_log off;
             log_not_found off;
