whitelist allow all ip - rate limits seem ok

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,15 +85,12 @@ http {
     
     limit_req_status 429;
 
-    # IP Whitelisting - More restrictive
+    # IP Whitelisting - FIXED: Allow all IPs by default
     geo $allowed_ip {
-        default 0;                      # Deny all by default
-        127.0.0.1/32 1;               # Allow localhost
-        192.168.0.0/16 1;             # Allow private network 192.168.x.x
-        10.0.0.0/8 1;                 # Allow private network 10.x.x.x
-        172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
-        # Add specific IP ranges here if needed
-        # 203.0.113.0/24 1;           # Example: Allow specific public IP range
+        default 1;                      # ALLOW ALL by default
+        # You can add specific blocks here if needed:
+        # 1.2.3.4/32 0;                # Block specific IP
+        # 192.168.1.0/24 0;            # Block specific range
     }
 
     # Upstream definition with standard settings
@@ -127,7 +124,7 @@ http {
         listen 80;
         server_name localhost ai.junder.uk;
         
-        # IP Access Control
+        # IP Access Control - FIXED: Only block if specifically denied
         if ($allowed_ip = 0) {
             return 403;
         }
